--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,20 @@
 [package]
 name = "Ascension"
+description = ""
+authors = ["Xenia Melnikova", "Igor Galkin galigorrom@gmail.com"]
+categories = ["command-line-interface", "game-development", "games"]
+keywords = ["gamedev", "tui", "rpg"]
 version = "0.1.0"
 edition = "2021"
+readme = "README.md"
+repository = "https://github.com/autogalkin/Ascension"
+license = "MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "Ascension"
 
 [dependencies]
+clap = { version = "*", features = ["cargo"] }
+crossterm = { version = "*" }
+ratatui = { version = "*", default-features = false, features = ["crossterm"] }
+rand = "*"
