feat(net): add message pipes for server and client
- messages encode to json and send over tcp
- add ClientMessage, ServerMessage, LoginStatus
- handle invalid usernames, users count etc
- broadcast messages to all peers

TODO:
- add game messages
- refactor repeated code in the server and the client
- fix anyhow errors spawn double message:
       Error(ErrorKind, "message").context("message")
- fix dead code
- fix unused dependencies

-

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,11 @@ anyhow = "*"
 const_format = "*"
 tokio = { version = "*", features = ["full"] }
 tokio-util = { version = "*", features = ["full"] }
+tokio-stream = "*"
 bytes = "*"
 reqwest = { version = "*" }
 serde = { version = "*", features = [ "derive" ] }
+serde_json = "*"
 futures = { version = "*", features = ["thread-pool"]}
 tracing = "*"
 tracing-subscriber = {version="*", features=["env-filter"]}
