--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,4 @@ tracing = "*"
 tracing-subscriber = {version="*", features=["env-filter"]}
 tracing-appender = "*"
 thiserror = "*"
+enum_dispatch = "0.3.12"
