--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,4 @@ tracing-subscriber = {version="*", features=["env-filter"]}
 tracing-appender = "*"
 thiserror = "*"
 enum_dispatch = "0.3.12"
+ansi-to-tui = "3.1.0"
