--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,5 +39,6 @@ enum_dispatch = "0.3.12"
 ansi-to-tui = "3.1.0"
 structstruck = "0.4.1"
 take_mut = "0.2.2"
+lazy_static = "1.4.0"
 #[patch.crates-io]
 #ansi-to-tui = { path = "./ansi-to-tui" }
