--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,5 +40,7 @@ ansi-to-tui = "3.1.0"
 structstruck = "0.4.1"
 take_mut = "0.2.2"
 lazy_static = "1.4.0"
+textwrap = "0.16.0"
+async-trait = "0.1.71"
 #[patch.crates-io]
 #ansi-to-tui = { path = "./ansi-to-tui" }
