--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,5 +43,6 @@ lazy_static = "1.4.0"
 textwrap = "0.16.0"
 async-trait = "0.1.71"
 paste = "1.0.14"
+arrayvec = "0.7.4"
 #[patch.crates-io]
 #ansi-to-tui = { path = "./ansi-to-tui" }
