--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ futures = { version = "*", features = ["thread-pool"]}
 tracing = "*"
 tracing-subscriber = {version="*", features=["env-filter"]}
 tracing-appender = "*"
+tracing-test = "0.1"
 thiserror = "*"
 enum_dispatch = "0.3.12"
 ansi-to-tui = "3.1.0"
@@ -43,4 +44,5 @@ textwrap = "0.16.0"
 async-trait = "0.1.71"
 paste = "1.0.14"
 arrayvec = "0.7.4"
+scopeguard = "1.2.0"
 
