--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,6 @@ license = "MIT"
 name = "ascension"
 
 [dependencies]
-ascension-macro = {path="ascension-macro"}
 tracing-test = "0.1"
 ansi-to-tui = "3.1.0"
 take_mut = "0.2.2"
@@ -40,4 +39,5 @@ ratatui = { version = "0.22.0", features = ["crossterm"] }
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 clap = { version = "4.3.21", features = ["cargo"] }
 futures = "0.3.28"
+derive_more = { version = "1.0.0-beta.3", features = ["debug", "try_unwrap", "from"], git = "https://github.com/JelteF/derive_more.git"}
 
