--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,4 +40,5 @@ crossterm = { version = "0.27.0", features = ["event-stream"] }
 clap = { version = "4.3.21", features = ["cargo"] }
 futures = "0.3.28"
 derive_more = { version = "1.0.0-beta.3", features = ["debug", "try_unwrap", "from"], git = "https://github.com/JelteF/derive_more.git"}
+thiserror = "1.0.46"
 
