--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,6 @@ ratatui = { version = "0.22.0", features = ["crossterm"] }
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 clap = { version = "4.3.21", features = ["cargo"] }
 futures = "0.3.28"
-derive_more = { version = "1.0.0-beta.3", features = ["debug", "try_unwrap", "from", "display", "deref"], git = "https://github.com/JelteF/derive_more.git"}
+derive_more = { version = "1.0.0-beta.3", features = ["debug", "try_unwrap", "from", "into", "try_into", "display", "deref"], git = "https://github.com/JelteF/derive_more.git"}
 thiserror = "1.0.46"
 
