--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ tracing = "0.1.37"
 serde_json = "1.0.104"
 anyhow = "1.0.74"
 rand = "0.8.5"
-const_format = "0.2.31"
+const_format = { version = "0.2.31", features = ["rust_1_51"] }
 tracing-appender = "0.2.2"
 tokio = { version = "1.31.0", features = ["full"] }
 serde = { version = "1.0.183", features = ["derive"] }
