feat(main): add tracing_console feature and add username with 2-20 characters range

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ license = "MIT"
 [[bin]]
 name = "ascension"
 
+[features]
+tokio-console = ["console-subscriber"]
+
 [dependencies]
 tracing-test = "0.1"
 ansi-to-tui = "3.1.0"
@@ -42,4 +45,6 @@ futures = "0.3.28"
 derive_more = { version = "1.0.0-beta.3", features = ["debug","try_unwrap", "from", "into", "try_into", "display", "deref", "deref_mut"], git = "https://github.com/JelteF/derive_more.git"}
 thiserror = "1.0.46"
 async-recursion = "1.0.4"
+arraystring = { version = "0.3.0", features = ["serde", "serde-traits"] }
+console-subscriber = {version= "0.1.10", optional = true}
 
